--- a/action.yml
+++ b/action.yml
@@ -19,6 +19,11 @@ runs:
   using: "composite"
   steps:
 
+    - name: "Checkout package"
+      uses: actions/checkout@v4
+      with:
+        path: package
+
     - name: "Check Spack recipe"
       shell: bash
       run: |
