--- a/action.yml
+++ b/action.yml
@@ -28,7 +28,7 @@ runs:
       shell: bash
       run: |
         ignore_exp="(?!($(echo ${{ inputs.ignore-list }} | sed 's:\s\+:|:g')))"
-        for opt in $(grep -ioP "^option\(\K${ignore_exp}[^ ]+" ${{ inputs.cmakelists-txt }}) ; do
+        for opt in $(grep -ioP "^option\(\K[^ ]+" ${{ inputs.cmakelists-txt }} | grep -Ev "$ignore_exp") ; do
           echo "Checking for presence of '$opt' CMake option in package.py"
           grep -cP "define.+\b${opt}\b" ${{ inputs.recipe-file }}
         done
