--- a/action.yml
+++ b/action.yml
@@ -29,7 +29,13 @@ runs:
       run: |
         ignore_exp="(?!($(echo ${{ inputs.ignore-list }} | sed 's:\s\+:|:g')))"
         for opt in $(grep -ioP "^option\(\K[^ ]+" ${{ inputs.cmakelists-txt }} | grep -Ev "$ignore_exp") ; do
-          echo "Checking for presence of '$opt' CMake option in package.py"
-          count+=$(grep -cP "define.+\b${opt}\b" ${{ inputs.recipe-file }} || true)
+          echo -n "Checking for presence of '$opt' CMake option in package.py..."
+          found=$(grep -cP "define.+\b${opt}\b" ${{ inputs.recipe-file }} || true)
+          if [ $found -eq 0 ]; then
+            echo "Not found"
+            count+=${found}
+          else
+            echo
+          fi
         done
         exit $count
