--- a/action.yml
+++ b/action.yml
@@ -32,10 +32,10 @@ runs:
           echo -n "Checking for presence of '$opt' CMake option in package.py..."
           found=$(grep -cP "define.+\b${opt}\b" ${{ inputs.recipe-file }} || true)
           if [ $found -eq 0 ]; then
-            echo " Not found"
+            echo " NOT FOUND"
             count+=1
           else
-            echo
+            echo " found"
           fi
         done
         exit $count
